# optimally-bad-wordle

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: filterer.rs  packer.rs  realizer.rs
src/: filterer.rs  letterset.rs  lib.rs  main.rs  packer.rs  realizer.rs  signature.rs  words.rs
