[package]
name = "wrong_wordle"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
