[package]
name = "wrong_wordle"
version = "0.1.0"
edition = "2024"
authors = ["Chance Addis <chance.h.addis@proton.me>"]
description = "Finds all optimally bad Wordle solutions using set-packing and bitset optimizations."
license = "MIT"
repository = "https://github.com/pure-chance/optimally-bad-wordle"
keywords = ["wordle", "optimization", "set-packing", "parallel", "rayon"]
categories = ["algorithm", "puzzle", "optimization"]
readme = "README.md"

[dependencies]
itertools = "0.14.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
