[package]
name = "wrong_wordle"
version = "0.1.0"
edition = "2024"
authors = ["Chance Addis <chance.h.addis@proton.me>"]
description = "Finds all optimally bad Wordle solutions."
license = "MIT"
repository = "https://github.com/pure-chance/optimally-bad-wordle"
keywords = ["wordle", "optimization", "(kinda)"]
categories = ["mathematics"]
readme = "README.md"

[dependencies]
indicatif = { version = "0.18.3", features = ["rayon"] }
itertools = "0.14.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = "0.8.1"

[profile.release]
lto = true
codegen-units = 1
debug = false
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[[bench]]
name = "packer"
harness = false

[[bench]]
name = "realizer"
harness = false
